--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <img src="././assets/img/Illustration 2.png" alt="we-care-logo" class="logo-image">
+        <img src="././assets/img/we-care.png" alt="we-care-logo" class="logo-image">
 
         <section>
             <h1>We Care</h1>
